# LawGPT

./: .gitignore  README.md  pyproject.toml
data/downloaded/: judicial_yuan_qa.json  moex.json
data/processed/: roc_law_corpus.json
notebooks/: demo.ipynb
src/lawgpt/: __main__.py  finetune_lora.py  infer.py  webui.py
src/lawgpt/cli/: __init__.py  cli.py  util.py
src/lawgpt/data/: __init__.py  constant.py  roc_law_corpus.py  util.py
src/lawgpt/utils/: __init__.py  io_util.py  prompter.py
src/lawgpt/utils/templates/: roc_law.json
